@@ -1,0 +1,3 @@
+log(match("text", "text")) //true
+log(match("text", "tex"))  //false
+log(match("text")) //false
