@@ -15,3 +15,4 @@ CHANGES:
         require 'tritium/engine/test'
         # Inside my tests
 	include Tritium::Engine::Test::Gauntlet
+  * match() now returns "true" and "false"
